@@ -1,4 +1,4 @@
-package com.thisaster.testtask.auth.service;
+package com.thisaster.testtask.auth.util;
 
 import com.thisaster.testtask.auth.config.UserPrincipal;
 import io.jsonwebtoken.Claims;
@@ -7,7 +7,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.stereotype.Service;
+import org.springframework.stereotype.Component;
 
 import java.security.KeyFactory;
 import java.security.PrivateKey;
@@ -19,47 +19,43 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
-@Service
 @Slf4j
-public class JwtService {
-    @Value("${keys.privateKey}")
+@Component
+public class JwtUtil {
+
+    @Value("${jwt.privateKey}")
     private String privateKey;
 
-    @Value("${keys.publicKey}")
+    @Value("${jwt.publicKey}")
     private String publicKey;
+
 
     public String extractUserName(String token) {
         return extractClaim(token, Claims::getSubject);
     }
 
-    public boolean isTokenValid(String token, UserDetails userDetails) {
-        final String userName = extractUserName(token);
-        return (userName.equals(userDetails.getUsername())) && !isTokenExpired(token);
-    }
-
-
-    private <T> T extractClaim(String token, Function<Claims, T> claimsResolvers) {
-        final Claims claims = extractAllClaims(token);
-        return claimsResolvers.apply(claims);
-    }
-
     public String generateToken(UserDetails userDetails) {
         Map<String, Object> claims = new HashMap<>();
-        claims.put("id", userDetails.getUsername());
-        if (userDetails instanceof UserPrincipal customUserDetails) {
-            claims.put("id", customUserDetails.getUser().getId());
-            claims.put("email", customUserDetails.getUser().getEmail());
-            claims.put("roles", customUserDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList());
-            claims.put("enabled", customUserDetails.isEnabled());
+        if (userDetails instanceof UserPrincipal userPrincipal) {
+            claims.put("id", userPrincipal.getUser().getId());
+            claims.put("username", userPrincipal.getUsername());
+            claims.put("email", userPrincipal.getUser().getEmail());
+            claims.put("roles", userPrincipal.getAuthorities().stream()
+                    .map(GrantedAuthority::getAuthority)
+                    .collect(Collectors.toList())
+            );
         }
-        log.debug("auth clainms {}", claims);
-        return generateToken(claims, userDetails);
+
+
+        log.debug("claims: {}", claims);
+        return createToken(claims, userDetails);
     }
 
-    public String generateToken(Map<String, Object> extraClaims, UserDetails userDetails) {
+    public String createToken(Map<String, Object> claims, UserDetails userDetails) {
         return Jwts.builder()
-                .claims(extraClaims)
+                .claims(claims)
                 .subject(userDetails.getUsername())
                 .issuedAt(new Date(System.currentTimeMillis()))
                 .expiration(new Date(System.currentTimeMillis() + 1000 * 60 * 60 * 24 * 5))
@@ -69,18 +65,38 @@ public class JwtService {
 
     private PrivateKey getSigningKey() {
         try {
-
-            String privateKeyBase64 = privateKey.replace("\n", "");
-            byte[] keyBytes = Base64.getDecoder().decode(privateKeyBase64);
+            String privateKeyPEM = privateKey.replace("-----BEGIN PRIVATE KEY-----", "").replace("-----END PRIVATE KEY-----", "");
+            byte[] encoded = Base64.getDecoder().decode(privateKeyPEM);
             KeyFactory keyFactory = KeyFactory.getInstance("RSA");
-            PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
-
+            PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(encoded);
             return keyFactory.generatePrivate(keySpec);
-
         } catch (Exception e) {
             throw new RuntimeException("Error while loading private key", e);
         }
     }
+
+    private <T> T extractClaim(String token, Function<Claims, T> claimsResolvers) {
+        final Claims claims = extractAllClaims(token);
+        return claimsResolvers.apply(claims);
+    }
+
+    public Claims extractAllClaims(String token) {
+        try {
+            return Jwts.parser()
+                    .verifyWith(getPublicKey())
+                    .build()
+                    .parseSignedClaims(token)
+                    .getPayload();
+        } catch (Exception e) {
+            throw new RuntimeException("Не удалось извлечь данные: " + e);
+        }
+    }
+
+    public boolean isTokenValid(String token, UserDetails userDetails) {
+        final String userName = extractUserName(token);
+        return (userName.equals(userDetails.getUsername())) && !isTokenExpired(token);
+    }
+
 
     private boolean isTokenExpired(String token) {
         return extractExpiration(token).before(new Date());
@@ -91,28 +107,18 @@ public class JwtService {
         return extractClaim(token, Claims::getExpiration);
     }
 
-
-    public Claims extractAllClaims(String token) {
-        return (Claims) Jwts.parser()
-                .verifyWith(getPublicKey())
-                .build()
-                .parse(token)
-                .getPayload();
-    }
-
     private PublicKey getPublicKey() {
         try {
-
+            // Убираем переносы строк и декодируем ключ из Base64
             String publicKeyBase64 = this.publicKey.replace("\n", "");
             byte[] keyBytes = Base64.getDecoder().decode(publicKeyBase64);
-
             KeyFactory keyFactory = KeyFactory.getInstance("RSA");
             X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);
-
             return keyFactory.generatePublic(keySpec);
         } catch (Exception e) {
             throw new RuntimeException("Error while loading public key", e);
         }
     }
+
 
 }
